backend/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend-deployment
  labels:
    app: django-backend
spec:
  # Nombre de pods (répliques) à maintenir
  replicas: 2 
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
      - name: django-backend
        # REMPLACER par le chemin de votre image Docker (ex: mon-docker-hub/django-backend:latest)
        image: VOTRE_IMAGE_BACKEND_ICI 
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
